force-app/main/default/objects/DN_Zip_Code__c/DN_Zip_Code__c.object-meta.xml
<CustomObject>
    <description>DN Zip Code Assignments to Lead</description>
    <label>DN Zip Code</label>
    <nameField>
        <displayFormat>Zip-{0000}</displayFormat>
        <label>DN Zip Codes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DN Zip Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>