force-app/main/default/objects/DN_Zip_Code__c/fields/Tradeshow__c.field-meta.xml
<CustomField>
    <fullName>Tradeshow__c</fullName>
    <label>Tradeshow Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adhoc</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>National</fullName>
                <default>true</default>
                <label>National</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>