force-app/main/default/objects/DN_Zip_Code__c/listViews/Lookup.listView-meta.xml
<ListView>
    <fullName>Lookup</fullName>
    <columns>NAME</columns>
    <columns>Zip_Code__c</columns>
    <columns>Territory__c</columns>
    <columns>Region__c</columns>
    <columns>Rep_Name__c</columns>
    <columns>Role__c</columns>
    <columns>Tradeshow__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Zip_Code__c</field>
        <operation>equals</operation>
        <value>78253</value>
    </filters>
    <label>Lookup</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>